--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -32,116 +32,173 @@
 
     <!-- menu -->
         <section id="menu">
+          <div class="menu">
             <div class="menu_top">
                 <h2 class="menu_top_title">La palette du goût</h2>
                 <span class="heart">
                     <i class="fas fa-heart"></i>
                 </span>
             </div>
-            <div class="menu_bloc">
-                <div class="menu_bloc_card">
-                    <div class="menu_bloc_title"><h3>Entrées</h3></div>
-                        <div class="menu_dishes menu_dishes--1">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Fricassée d'escargot</h3>
-                                <p class="dish_subtitle">Au piment d'Espelette</p>
-                            </div>
-                            <div class="dish_price">25€</div>
+            
+            <div class="menu__grid">
+                <div class="menu__grid__bloc">
+                  <div class="menu__grid__title"><h3>entrées</h3></div>
+                   <div class="menu__grid__case menu__grid__case--1">
+                    <div class="dish-and-price">
+                      <div class="menu__case__dish">
+                        <div class="menu__case__dish-title">
+                          <p>Fricassée d'escargot</p>
                         </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
+                        <div class="menu__case__dish-subtitle">
+                          <p>Au piment d'Espelette</p>
                         </div>
-                        <div class="menu_dishes menu_dishes--2">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Foie gras de canard mi-cuit</h3>
-                                <p class="dish_subtitle">Et ses copeaux de truffe noire</p>
-                            </div>
-                            <div class="dish_price">35€</div>
+                      </div>
+                      <div class="menu__case__price">25€</div>
+                  </div>
+                    <div class="validation__box">
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                  </div>
+                  <div class="menu__grid__case menu__grid__case--2">
+                    <div class="dish-and-price">
+                      <div class="menu__case__dish">
+                        <div class="menu__case__dish-title">
+                          <p>Foie gras de canard mi-cuit</p>
                         </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
+                        <div class="menu__case__dish-subtitle">
+                          <p>Et ses copeaux de truffe noire</p>
                         </div>
-                        <div class="menu_dishes menu_dishes--3">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Oeuf au plat</h3>
-                                <p class="dish_subtitle">Assaisonné à la truffe sur lit de caviar</p>
-                            </div>
-                            <div class="dish_price">20€</div>
+                      </div>
+                      <div class="menu__case__price">35€</div>
+                  </div>
+                    <div class="validation__box">
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                  </div>
+                  <div class="menu__grid__case menu__grid__case--3">
+                    <div class="dish-and-price">
+                      <div class="menu__case__dish">
+                        <div class="menu__case__dish-title">
+                          <p>Oeuf au plat</p>
                         </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
+                        <div class="menu__case__dish-subtitle">
+                          <p>Assaisonné à la truffe sur lit de caviar</p>
                         </div>
+                      </div>
+                      <div class="menu__case__price">20€</div>
+                  </div>
+                    <div class="validation__box">
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                  </div>
                 </div>
-                <div class="menu_bloc_card">
-                    <div class="menu_bloc_title"><h3>Plats</h3></div>
-                        <div class="menu_dishes menu_dishes--4">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Filet de boeuf aux herbes</h3>
-                                <p class="dish_subtitle">Accompagné de sa ribambelle de légumes</p>
-                            </div>
-                            <div class="dish_price">40€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu_dishes menu_dishes--5">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Parmentier de queue de boeuf</h3>
-                                <p class="dish_subtitle">À la truffe noire sur sa purée de panais</p>
-                            </div>
-                            <div class="dish_price">35€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu_dishes menu_dishes--6">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Filet de turbot</h3>
-                                <p class="dish_subtitle">Aux agrumes</p>
-                            </div>
-                            <div class="dish_price">44€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
+                <div class="menu__grid__bloc">
+                 <div class="menu__grid__title"><h3>plats</h3></div>
+                 <div class="menu__grid__case menu__grid__case--4">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Filet de boeuf aux herbes</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Accompagné de sa ribambelle de légumes</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">40€</div>
                 </div>
-                <div class="menu_bloc_card">
-                    <div class="menu_bloc_title"><h3>Desserts</h3></div>
-                        <div class="menu_dishes menu_dishes--7">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Paris-Brest</h3>
-                                <p class="dish_subtitle">Revisité</p>
-                            </div>
-                            <div class="dish_price">18€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu_dishes menu_dishes--8">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Macaron au chocolat d'exception</h3>
-                                <p class="dish_subtitle">Et glace à la vanille de Madagascar</p>
-                            </div>
-                            <div class="dish_price">22€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu_dishes menu_dishes--9">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Mousse au chocolat</h3>
-                                <p class="dish_subtitle">Au piment d'Espelette et à la truffe noire</p>
-                            </div>
-                            <div class="dish_price">23€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
                 </div>
-            </div>
+                <div class="menu__grid__case menu__grid__case--5">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Parmentier de queue de boeuf</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>À la truffe noire sur sa purée de panais</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">35€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+                <div class="menu__grid__case menu__grid__case--6">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Filet de turbot</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Aux agrumes</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">44€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+               </div>
+               <div class="menu__grid__bloc">
+                 <div class="menu__grid__title"><h3>desserts</h3></div>
+                 <div class="menu__grid__case menu__grid__case--7">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Paris-Brest</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Revisité</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">18€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+                <div class="menu__grid__case menu__grid__case--8">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Macaron au chocolat d'exception</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Et glace à la vanille de Madagascar</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">22€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+                <div class="menu__grid__case menu__grid__case--9">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Mousse au chocolat</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Au piment d'Espelette et à la truffe noire</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">23€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+               </div>
+              </div>
             <div class="menu_button">
                 <button class="menu_button_order" id="order_button">Commander</button>
             </div>
+        </div>
         </section>
 
     <!-- footer -->
